# tape

./: Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
crates/tape-core/: Cargo.toml  README.md
crates/tape-core/src/: lib.rs
crates/tape-core/src/act/: mod.rs
crates/tape-core/src/canonicalize/: convert_dq.rs  convert_enigo.rs  declaration.rs  mod.rs
crates/tape-core/src/record/: mod.rs
crates/tape-egui/: Cargo.toml  README.md
crates/tape-egui/src/: main.rs
crates/tape-egui/src/app/: core.rs  mod.rs
crates/tape-egui/src/app/pages/: about.rs  mod.rs
crates/tape-egui/src/utils/: mod.rs
crates/tape-node/: .yarnrc.yml  Cargo.toml  index.d.ts  index.js  package.json
crates/tape-node/.github/workflows/: CI.yml
crates/tape-node/__test__/: async_task.mjs  callback_and_task.mjs  record.mjs
crates/tape-node/js_example/: act_async.mjs  act_callback.mjs  misc.js  record_async.mjs  record_callback.mjs  sim.json
crates/tape-node/npm/darwin-arm64/: README.md  package.json
crates/tape-node/npm/darwin-x64/: README.md  package.json
crates/tape-node/npm/win32-arm64-msvc/: README.md  package.json
crates/tape-node/npm/win32-x64-msvc/: README.md  package.json
crates/tape-node/src/: act.rs  lib.rs  record.rs
crates/tape-node/src/ffi_adapter/: mod.rs
crates/tape-tauri/: Cargo.toml  README.md  package.json  tauri.conf.json  vite.config.ts
crates/tape-tauri-front/: package.json
crates/tape-tauri/backend/: Cargo.toml  tauri.conf.json  tauri.conf.json5
crates/tape-tauri/backend/icons/: icon.icns
src/: main.rs
src/act/: mod.rs
src/app/: core.rs  font.rs  icon.rs  icons.rs  misc.rs  mod.rs  notify.rs  prefab.rs  prelude.rs
src/app/components/: banner.rs  mod.rs
src/app/pages/: about.rs  home.rs  mod.rs  record.rs
src/app/prefabs/: mod.rs
src/canonicalize/: convert_dq.rs  convert_enigo.rs  declaration.rs  declare.rs  mod.rs
src/record/: mod.rs
