[package]
name = "tape"
version = "0.1.0"
edition = "2021"
authors = ["lopo<lopo@zju.edu.cn>"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.30" }
device_query = "1.1.3"
eframe = { version = "0.22.0" }
egui_extras = { version = "0.22.0", features = ["image", "svg"] }
enigo = "0.1.3"
image = "0.24.6"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.0"