[package]
name = "tape-core"
version = "0.1.0"
edition = "2021"
authors = ["lopo<lopo@zju.edu.cn>"]
license = "MIT"
readme = "README.md"

[lib]

[dependencies]
chrono = { version = "0.4.30" }
device_query = "1.1.3"
enigo = "0.1.3"
image = { version = "0.24.6", features = ["jpeg", "png"] }
serde.workspace = true
toml = "0.8.0"