[package]
name = "tape-tauri"
version = "0.1.0"
edition = "2021"
authors = ["lopo<lopo@zju.edu.cn>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "config-json5"] }
serde.workspace = true
serde_json.workspace = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
